# marginalia

./: .gitignore  README.md  agri-rag-instructions.md  ingest.py  mcp_server.py  pyproject.toml
api/: app.py  schemas.py
api/static/: index.html
eval/: answer_cases.jsonl  answer_eval.py  patient_eval.py  patient_golden.py  questions.json  run_answer_eval.py  run_eval.py  run_patient_eval.py
expl/: ask.py  script.py
index/: __init__.py  embeddings.py  pipeline.py  qdrant_store.py  store.py
ingest/: __init__.py  export.py  pipeline.py
masking/: identifiers.py  llm.py  mask.py
models/: __init__.py  answer.py  chat.py  chunk.py  embedding.py  evidence.py  indexing.py  retrieval.py
orchestrator/: fuse.py  graph.py  guideline_adapter.py  patient_adapter.py  pipeline.py  router.py
patient/: db.py  dictionary.py  evidence.py  pipeline.py  schema.py  seed.py  sql_generation.py  validation.py  views.py
qa/: __init__.py  answerer.py  citations.py  graph.py  llm.py  prompt.py  rewrite.py
retrieval/: __init__.py  evidence.py  reranker.py  retriever.py
scratch/: demo.py
talks/: marginalia-theme.scss  marginalia.html  marginalia.qmd
tests/: conftest.py  test_answer_eval.py  test_answerer.py  test_api.py  test_citations.py  test_evidence.py  test_fuse.py  test_graph_orchestrator.py  test_guideline_adapter.py  test_identifiers.py  test_mask.py  test_masking_llm.py  test_orchestrator_e2e.py  test_orchestrator_masking.py  test_patient_adapter.py  test_patient_dictionary.py  test_patient_eval.py  test_patient_evidence.py  test_patient_pipeline.py  test_patient_plane_e2e.py  test_patient_schema.py  test_patient_scoping.py  test_patient_seed.py  test_patient_sql_generation.py  test_patient_validation.py  test_patient_views.py  test_prompt.py  test_qdrant_store.py  test_reranker.py  test_retriever.py  test_router.py  test_samples.py
