[project]
name = "reading-assistant"
version = "0.1.0"
description = "AI-powered reading companion for research papers and books"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.90.0",
    "chromadb>=0.6.3",
    "fastapi>=0.115.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.7.0",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.30.0",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
    "mcp[cli]>=1.27.1",
    "fastembed>=0.4.0",
    "pydantic-ai>=1.105.0",
    "sqlglot>=25.0",
    "sqlalchemy>=2.0",
    "faker>=30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
